@@ -137,6 +137,7 @@ This feature was developed by Jake Howard.
  * Remove unused dev-only react-axe integration (Thibaud Colas)
  * Migrate accessible Skip Link implementation to a Stimulus controller (Loveth Omokaro)
  * Split up `wagtail.admin.panels` into submodules, existing exports have been preserved (Matt Westcott)
+ * Refactor userbar styles to use the same stylesheet as other components (Thibaud Colas)
 
 ## Upgrade considerations
 
